--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~14.2.10",
     "@angular/platform-browser-dynamic": "~14.2.10",
     "@angular/router": "~14.2.10",
+    "artyom.js": "^1.0.6",
     "jquery": "^3.6.1",
     "leapjs": "^1.1.1",
     "rxjs": "~7.5.7",
